feat: send user data
